fixed issue with contact box on mobile and fixed sizing of projects on mobile and small screens.  just need to fix top of page.

--- a/style.css
+++ b/style.css
@@ -425,7 +425,9 @@ section {
     -24px -24px 48px #ffffff;
     margin: 25px 0;
     overflow: hidden;
-    width: 40vmin;
+    width: auto;
+    min-width: 300px;
+    max-width: 40vmin;
     border-radius: 35px;
     border-color: black;
     border-width: 20px;
@@ -433,11 +435,12 @@ section {
 
 .project-card-image {
     border-bottom: 4px solid #dfdfe5;
-    width: 45vmin;
+    width: 40vmin;
+    min-width: 300px;
     overflow: hidden;
     aspect-ratio: 16/9;
-    display: flex;
     object-fit: cover;
+    display: flex;
     justify-content: center;
 }
 
@@ -453,6 +456,8 @@ section {
     display: flex;
     align-items: center;
     flex-direction: column;
+    font-size: medium;
+    margin: .5rem;
 }
 
 .project-card_link_boarder {
@@ -482,6 +487,7 @@ section {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
 }
 
 .contact-info-upper-container {
@@ -491,7 +497,7 @@ section {
     justify-content: center;
     border-radius: 2rem;
     border-color: rgb(163, 163, 163);
-    margin: 2rem auto;
+    margin: 2rem 0 2rem 0;
     padding: 0.5rem;
     background-color: #dfdfe5;
 }
